changed cover (only) tex file

--- a/FY2018Bridging-BuildingASystem.tex
+++ b/FY2018Bridging-BuildingASystem.tex
@@ -62,7 +62,7 @@
 \usepackage{fancybox}
 
 
-\usepackage[print,code,gray,sectionbreak]{pdfscreen}
+\usepackage[screen,code,gray,sectionbreak]{pdfscreen}
 \begin{screen}
  \margins{.65in}{.65in}{.65in}{.65in}
  \screensize{6.25in}{10in}
@@ -140,12 +140,12 @@
     %{\includegraphics[width=0.35\paperwidth,height=0.1\paperheight]{boelogo.png}};
 
 \tikz [remember picture,overlay]
-    \node [yshift=0.5\paperheight,xshift=0.26\paperwidth,inner sep=0pt] at (current page.south west){\begin{minipage}{0.4\paperwidth}\raggedright    \textcolor{red}{\textbf {Central Banking Qualification Foundation Year}} \end{minipage}};
+    \node [yshift=0.5\paperheight,xshift=0.26\paperwidth,inner sep=0pt] at (current page.south west){\begin{minipage}{0.4\paperwidth}\raggedright    \textcolor{red}{\textbf {Central Banking Qualification Foundation Year\\Bridging: Economics}} \end{minipage}};
    
 
 
 \tikz [remember picture,overlay]
-    \node [yshift=-0.7\paperheight,xshift=0.26\paperwidth,inner sep=0pt] at (current page.north west){\begin{minipage}{0.4\paperwidth}\raggedright       \LARGE \textcolor{Burgundy}{\fontsize{26}{20}\selectfont Building a traditional banking system with a central bank.\\~\\(The economics of the financial system.)} \end{minipage}};
+    \node [yshift=-0.7\paperheight,xshift=0.26\paperwidth,inner sep=0pt] at (current page.north west){\begin{minipage}{0.4\paperwidth}\raggedright       \LARGE \textcolor{Burgundy}{\fontsize{26}{20}\selectfont Building a banking system with a central bank} \end{minipage}};
 
 
 \tikz [remember picture,overlay]
@@ -179,7 +179,7 @@
         \tikz [remember picture,overlay]
     \node [yshift=-0.55\paperheight,xshift=-0.35\paperwidth,inner sep=0pt] at (current page.north east){\begin{minipage}[c]{0.2\paperwidth} \textcolor{red}{\begin{tabular}{l}
          \textbf{\textcolor{Burgundy}{Date}} \\
-         15 September 2017
+         December 2018
         \end{tabular}}\end{minipage}};
 \egroup 
 
